Fixed an inaccuracy
Changed "up to three other students" to "up to four other students" when describing the team round

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -22,7 +22,7 @@
     <div class="col-lg-4">
         <h2>Work together.</h2>
         <p><strong>Life is better in teams.</strong> The competition is divided into several <em>rounds</em>, during several
-        of which you get to work together with up to three other students to collaborate to do math. You can
+        of which you get to work together with up to four other students to collaborate to do math. You can
         help support each other and make each other better competitors, as well as winning glory for your school!</p>
     </div>
     <div class="col-lg-4">
