--- a/home/templates/home/info.html
+++ b/home/templates/home/info.html
@@ -55,14 +55,15 @@
 {% if competition %}
 <h3>Schedule</h3>
 <table class="schedule">
-    <tr><td>12:00 - 12:30 PM</td><td>Registration, finding assigned tables</td></tr>
+    <tr><td>11:45 AM - 12:15 PM</td><td>Registration, finding assigned tables</td></tr>
     <tr><td>12:30 - 1:00 PM</td><td>Subject Test #1</td></tr>
     <tr><td>1:05 - 1:35 PM</td><td>Subject Test #2</td></tr>
-    <tr><td>1:35 - 2:05 PM</td><td>Break</td></tr>
-    <tr><td>2:10 - 2:55 PM</td><td>Team Round</td></tr>
-    <tr><td>3:05 - 4:05 PM</td><td>Guts Round</td></tr>
-    <tr><td>4:15 - 5:00 PM</td><td>Fun Round, Tiebreakers</td></tr>
-    <tr><td>5:10 - 5:45 PM</td><td>Awards Ceremony</td></tr>
+    <tr><td>1:35 - 2:00 PM</td><td>Break</td></tr>
+    <tr><td>2:05 - 2:50 PM</td><td>Team Round</td></tr>
+    <tr><td>3:00 - 4:00 PM</td><td>Guts Round</td></tr>
+    <tr><td>4:00 - 4:30 PM</td><td>Tiebreakers and Dinner</td></tr>
+    <tr><td>4:30 - 5:15 PM</td><td>Fun Round</td></tr>
+    <tr><td>5:20 - 6:00 PM</td><td>Awards Ceremony</td></tr>
 </table>
 {% endif %}
 
