Added filler links for pdfs
Added filler links for the locations of the conventions and scoring pdf documents to be uploaded and linked

--- a/home/templates/home/rules.html
+++ b/home/templates/home/rules.html
@@ -70,6 +70,8 @@
     <li>If a question specifies an answer form, such as a + b*sqrt(2), please adhere to the specified form.</li>
 </ol>
 
+Further clarifications on terminology, notation, and acceptable answer forms can be found at <a href="http://mbmt.mbhs.edu/location/filename.pdf">this conventions document linked here</a>.
+
 <a name="awards"></a><h3>Scoring and Awards</h3>
 <ol>
 <li>A student&rsquo;s <strong>overall individual score</strong> is the weighted sum of the two subject tests that they have taken. The <strong>top 8 individuals</strong> in each division will be recognized, and the <strong>top 5 </strong>will receive medals.</li>
@@ -78,5 +80,7 @@
 <li>The <strong>team score</strong> is a weighted sum of the individual, Team Round, and Guts Round scores. The <strong>top 5 teams</strong> in each division will be recognized.</li>
 <li>The highest scoring 6th grade student in the Descartes division will receive the <strong>Young Scholar Award</strong>.</li>
 </ol>
+
+A more detailed guide to the scoring algorithm we use can be found at Further clarifications on terminology, notation, and acceptable answer forms can be found at <a href="http://mbmt.mbhs.edu/location/filename.pdf">the scoring document linked here</a>.
 
 {% endblock %}
