--- a/home/templates/home/rules.html
+++ b/home/templates/home/rules.html
@@ -81,6 +81,6 @@ Further clarifications on terminology, notation, and acceptable answer forms can
 <li>The highest scoring 6th grade student in the Descartes division will receive the <strong>Young Scholar Award</strong>.</li>
 </ol>
 
-A more detailed guide to the scoring algorithm we use can be found at Further clarifications on terminology, notation, and acceptable answer forms can be found at <a href="http://mbmt.mbhs.edu/location/filename.pdf">the scoring document linked here</a>.
+A more detailed guide to the scoring algorithm we use can be found at <a href="http://mbmt.mbhs.edu/location/filename.pdf">the scoring document linked here</a>.
 
 {% endblock %}
