--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -12,6 +12,8 @@
     <a href="{% url "coaches:register" %}" style="color: #ba2222">Register &#x276f;</a>
 </p>
 
+<p><a href="https://mbmt.mbhs.edu/location/brochure_filename.pdf" style = "color:red font-size:20px">Link to MBMT 2019 Brochure</a></p>
+
 <div class="row">
     <div class="col-lg-4">
         <h2>Solve problems.</h2>
