PDF Rules and Such

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,4 +1,5 @@
 {% extends "shared/base.html" %}
+{% load static %}
 
 {% block content %}
 
@@ -12,7 +13,7 @@
     <a href="{% url "coaches:register" %}" style="color: #ba2222">Register &#x276f;</a>
 </p>
 
-<p><a href="https://mbmt.mbhs.edu/location/brochure_filename.pdf" style = "color:red font-size:20px">Link to MBMT 2019 Brochure</a></p>
+<p><a href='{% static "files/Pamphlet.pdf" %}' style = "color:red font-size:20px">Link to MBMT 2019 Brochure</a></p>
 
 <div class="row">
     <div class="col-lg-4">
