--- a/home/templates/home/archive.html
+++ b/home/templates/home/archive.html
@@ -28,6 +28,75 @@ a round since we haven't done every round every year. In each year, the more dif
         </thead>
 
         <tbody>
+		            <tr>
+                <th rowspan="2">2019</th>
+                <th>Descartes</th>
+                <td>
+                    <a href="{% static 'archive/2019/descartes/algebra.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2019/descartes/algebra_key.pdf' %}" target="_blank">Solutions</a>
+                </td>
+                <td>
+                    <a href="{% static 'archive/2019/descartes/geo.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2019/descartes/geo_key.pdf' %}" target="_blank">Solutions</a>
+                </td>
+                <td>
+                    <a href="{% static 'archive/2019/descartes/combo.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2019/descartes/combo_key.pdf' %}" target="_blank">Solutions</a>
+                </td>
+                <td>
+                    <a href="{% static 'archive/2019/descartes/nt.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2019/descartes/nt_key.pdf' %}" target="_blank">Solutions</a>
+                </td>
+                <td>
+                    -
+                </td>
+                <td>
+                    <a href="{% static 'archive/2019/descartes/team.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2019/descartes/team_key.pdf' %}" target="_blank">Solutions</a>
+                </td>
+                <td>
+					<a href="{% static 'archive/2019/fun.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2019/fun_key.pdf' %}" target="_blank">Solutions</a>
+				</td>
+                <td>
+                    <a href="{% static 'archive/2019/descartes/guts.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2019/descartes/guts_key.pdf' %}" target="_blank">Solutions</a>
+                </td>
+            </tr>
+
+            <tr>
+                <th>Leibniz</th>
+                <td>
+                    <a href="{% static 'archive/2019/leibniz/algebra.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2019/leibniz/algebra_key.pdf' %}" target="_blank">Solutions</a>
+                </td>
+                <td>
+                    <a href="{% static 'archive/2019/leibniz/geo.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2019/leibniz/geo_key.pdf' %}" target="_blank">Solutions</a>
+                </td>
+                <td>
+                    <a href="{% static 'archive/2019/leibniz/combo.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2019/leibniz/combo_key.pdf' %}" target="_blank">Solutions</a>
+                </td>
+                <td>
+                    <a href="{% static 'archive/2019/leibniz/nt.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2019/leibniz/nt_key.pdf' %}" target="_blank">Solutions</a>
+                </td>
+                <td>
+                    -
+                </td>
+                <td>
+                    <a href="{% static 'archive/2019/leibniz/team.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2019/leibniz/team_key.pdf' %}" target="_blank">Solutions</a>
+                </td>
+                <td>
+					<a href="{% static 'archive/2019/fun.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2019/fun_key.pdf' %}" target="_blank">Solutions</a></td>
+                <td>
+                    <a href="{% static 'archive/2019/leibniz/guts.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2019/leibniz/guts_key.pdf' %}" target="_blank">Solutions</a>
+                </td>
+            </tr>
 
             <tr>
                 <th rowspan="2">2018</th>
