Change archive files

--- a/home/templates/home/archive.html
+++ b/home/templates/home/archive.html
@@ -54,9 +54,9 @@ a round since we haven't done every round every year. In each year, the more dif
                     <a href="{% static 'archive/2019/descartes/team.pdf' %}" target="_blank">Problems</a>
                     <br><a href="{% static 'archive/2019/descartes/team_key.pdf' %}" target="_blank">Solutions</a>
                 </td>
-                <td>
-					<a href="{% static 'archive/2019/fun.pdf' %}" target="_blank">Problems</a>
-                    <br><a href="{% static 'archive/2019/fun_key.pdf' %}" target="_blank">Solutions</a>
+                <td rowspan="2">
+					<a href="{% static 'archive/2019/fun_intro.pdf' %}" target="_blank">Introduction</a>
+                    <br><a href="{% static 'archive/2019/fun.pdf' %}" target="_blank">Problems</a>
 				</td>
                 <td>
                     <a href="{% static 'archive/2019/descartes/guts.pdf' %}" target="_blank">Problems</a>
@@ -90,9 +90,6 @@ a round since we haven't done every round every year. In each year, the more dif
                     <br><a href="{% static 'archive/2019/leibniz/team_key.pdf' %}" target="_blank">Solutions</a>
                 </td>
                 <td>
-					<a href="{% static 'archive/2019/fun.pdf' %}" target="_blank">Problems</a>
-                    <br><a href="{% static 'archive/2019/fun_key.pdf' %}" target="_blank">Solutions</a></td>
-                <td>
                     <a href="{% static 'archive/2019/leibniz/guts.pdf' %}" target="_blank">Problems</a>
                     <br><a href="{% static 'archive/2019/leibniz/guts_key.pdf' %}" target="_blank">Solutions</a>
                 </td>
@@ -124,7 +121,7 @@ a round since we haven't done every round every year. In each year, the more dif
                     <a href="{% static 'archive/2018/cantor/team.pdf' %}" target="_blank">Problems</a>
                     <br><a href="{% static 'archive/2018/cantor/team_key.pdf' %}" target="_blank">Solutions</a>
                 </td>
-                <td>N/A</td>
+                <td rowspan="2">-</td>
                 <td>
                     <a href="{% static 'archive/2018/cantor/guts.pdf' %}" target="_blank">Problems</a>
                     <br><a href="{% static 'archive/2018/cantor/guts_key.pdf' %}" target="_blank">Solutions</a>
@@ -156,7 +153,6 @@ a round since we haven't done every round every year. In each year, the more dif
                     <a href="{% static 'archive/2018/gauss/team.pdf' %}" target="_blank">Problems</a>
                     <br><a href="{% static 'archive/2018/gauss/team_key.pdf' %}" target="_blank">Solutions</a>
                 </td>
-                <td>N/A</td>
                 <td>
                     <a href="{% static 'archive/2018/gauss/guts.pdf' %}" target="_blank">Problems</a>
                     <br><a href="{% static 'archive/2018/gauss/guts_key.pdf' %}" target="_blank">Solutions</a>
@@ -191,7 +187,7 @@ a round since we haven't done every round every year. In each year, the more dif
                     <a href="{% static 'archive/2017/ramanujan/team.pdf' %}" target="_blank">Problems</a>
                     <br><a href="{% static 'archive/2017/ramanujan/team_key.pdf' %}" target="_blank">Solutions</a>
                 </td>
-                <td>N/A</td>
+                <td rowspan="2">-</td>
                 <td>
                     <a href="{% static 'archive/2017/ramanujan/guts.pdf' %}" target="_blank">Problems</a>
                     <br><a href="{% static 'archive/2017/ramanujan/guts_key.pdf' %}" target="_blank">Solutions</a>
@@ -223,7 +219,6 @@ a round since we haven't done every round every year. In each year, the more dif
                     <a href="{% static 'archive/2017/pascal/team.pdf' %}" target="_blank">Problems</a>
                     <br><a href="{% static 'archive/2017/pascal/team_key.pdf' %}" target="_blank">Solutions</a>
                 </td>
-                <td>N/A</td>
                 <td>
                     <a href="{% static 'archive/2017/pascal/guts.pdf' %}" target="_blank">Problems</a>
                     <br><a href="{% static 'archive/2017/pascal/guts_key.pdf' %}" target="_blank">Solutions</a>
@@ -258,7 +253,7 @@ a round since we haven't done every round every year. In each year, the more dif
                     <a href="{% static 'archive/2016/euclid/team.pdf' %}" target="_blank">Problems</a>
                     <br><a href="{% static 'archive/2016/euclid/team_key.pdf' %}" target="_blank">Answers</a>
                 </td>
-                <td>N/A</td>
+                <td rowspan="2">-</td>
                 <td rowspan="2">
                     <a href="{% static 'archive/2016/guts.pdf' %}" target="_blank">Problems</a>
                     <br><a href="{% static 'archive/2016/guts_key.pdf' %}" target="_blank">Answers</a>
@@ -291,7 +286,6 @@ a round since we haven't done every round every year. In each year, the more dif
                     <a href="{% static 'archive/2016/lobachevsky/team.pdf' %}" target="_blank">Problems</a>
                     <br><a href="{% static 'archive/2016/lobachevsky/team_key.pdf' %}" target="_blank">Answers</a>
                 </td>
-                <td>N/A</td>
             </tr>
 
             <tr>
@@ -303,7 +297,7 @@ a round since we haven't done every round every year. In each year, the more dif
                 <td><a href="{% static 'archive/2015/fermat/nt.pdf' %}" target="_blank">Problems</a></td>
                 <td><a href="{% static 'archive/2015/fermat/sprint.pdf' %}" target="_blank">Problems</a></td>
                 <td><a href="{% static 'archive/2015/fermat/team.pdf' %}" target="_blank">Problems</a></td>
-                <td>N/A</td>
+                <td rowspan="2">-</td>
                 <td rowspan="2"><a href="{% static 'archive/2015/guts.pdf' %}" target="_blank">Problems</a></td>
             </tr>
 
@@ -315,7 +309,6 @@ a round since we haven't done every round every year. In each year, the more dif
                 <td><a href="{% static 'archive/2015/euler/nt.pdf' %}" target="_blank">Problems</a></td>
                 <td><a href="{% static 'archive/2015/euler/sprint.pdf' %}" target="_blank">Problems</a></td>
                 <td><a href="{% static 'archive/2015/euler/team.pdf' %}" target="_blank">Problems</a></td>
-                <td>N/A</td>
             </tr>
         </tbody>
 </table>
