--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -9,11 +9,13 @@
 
 <p class="main-title">The Montgomery Blair Math Tournament</p>
 <p class="main-text">
-    <span>A mathematics competition for middle school students in the Maryland area on Saturday, March 30th, 2019</span>
+    <span>A mathematics competition for middle school students in the Maryland area on Saturday, March 28th, 2020</span>
     <a href="{% url "coaches:register" %}" style="color: #ba2222">Register &#x276f;</a>
 </p>
 
-<p><a href='{% static "files/Pamphlet.pdf" %}' style = "color:red font-size:20px">Link to MBMT 2019 Brochure</a></p>
+<p class="main-text">
+    You can find a link to our sample brochure from last year's contest<a href='{% static "files/Pamphlet.pdf" %}' style = "color:red font-size:20px">Link to MBMT 2019 Brochure</a></p>
+</p>
 
 <div class="row">
     <div class="col-lg-4">
