--- a/home/templates/home/rules.html
+++ b/home/templates/home/rules.html
@@ -5,7 +5,7 @@
 
 <h1 class="lowerer">Official Rules</h1>
 <p>
-    Welcome to the fifth annual Montgomery Blair Math Tournament, or MBMT for short!
+    Welcome to the sixth annual Montgomery Blair Math Tournament, or MBMT for short!
     MBMT is a free middle school math contest that seeks to inspire students' interest in mathematics and to encourage them to explore math beyond the school curriculum.
     Contest details can be found on the <a href="{% url "home:about" %}">information page</a>.
 </p>
@@ -16,14 +16,13 @@
         The math team sponsors of each school/organization register individual student teams through the website via the <a href="{% url "coaches:register" %}">registration page</a>.
         There is no limit to the number of full teams a school or organization may send.
     </li>
-    <li><b class="red">Subject Tests are specifically limited</b>. The goal of this policy is twofold: to make the subjects more competitive and balanced, and to perhaps introduce other topics of math not normally found in the classroom setting.</li>
+    <li><b class="red">Division A (Zermelo) only: Subject Tests are specifically limited</b>. The goal of this policy is twofold: to make the subjects more competitive and balanced, and to perhaps introduce other topics of math not normally found in the classroom setting.</li>
     <ol>
         <li>Each full team of 5 will be required to have at least 2 tests per subject. For example, it is not allowed to have only one student on a team of 5 take the Algebra Subject Test.</li>
         <li>A team of 4 will be required to have at least 1 test per subject, but no more than 3 tests per subject.</li>
         <li>A team of 3 will only be required to have at least 1 test per subject.</li>
         <li>Teams of 1 or 2 have no restrictions; however, refer to rule #4 below for more information on teams of 1 or 2.</li>
     </ol>
-    <li>Teams compete in 1 of <b>2 divisions</b>: Division A, “Leibniz,” or Division B, “Descartes”. Division A is suggested for students with more practice in competitions, whereas Division B is geared towards students with less experience. To suit different students’ abilities, each division offer different sets of questions in <b>all rounds</b>.</li>
     <li>If there are fewer than 5 students interested in participating, you may register incomplete teams. For an incomplete team’s Team and Guts round scores to be officially considered, incomplete teams must have <b>at least 3 students</b>. Teams with one or two students may compete, but their Team and Guts round will not be officially graded.</li>
     <li>We <b>do not</b> allow mixed-school or mixed-organization teams. However, we do allow organizations consisting of students from multiple schools, home-school groups, and community activity groups, to name a few.</li>
     <li>We <b>do not</b> allow elementary school students to participate in MBMT. </li>
@@ -32,9 +31,9 @@
 
 <a name="format"></a><h3>Round Format</h3>
 <ol class="top">
-    <li><b>The Subject Test round</b> consists of eight questions per subject with two subject tests and lasts thirty minutes. The subjects are <b>Algebra</b>, <b>Geometry</b>, <b>Counting and Probability</b>, and <b>Number Theory</b>.</li>
+    <li><b>The Individual round</b> consists of two tests, each with eight questions and lasting thirty minutes. Individual Tests in the Zermelo division are on two subjects among <b>Algebra</b>, <b>Geometry</b>, <b>Counting and Probability</b>, and <b>Number Theory</b>. Individual Tests in the Dedekind division include problems from all subjects.</li> 
     <li><b>The Team round</b> contains fifteen questions for all team members to collaboratively solve in 45 minutes.</li>
-    <li><b>The Guts round</b> is an intense but exciting round in which competing teams can see each others’ progress. It is 60 minutes long, is graded live, and requires each team to work together on progressively harder five-problem sets. Each new set is worth more points than the previous set. This year, <b class="red">different divisions will have different Guts round questions</b>. Note that <b>there are no benefits of turning in the last set early</b>. There are no bonus points for timing. Please also note that <b class="red">the weighting system for the later problems has been tweaked</b> to more accurately reflect difficulty.
+    <li><b>The Guts round</b> is an intense but exciting round in which competing teams can see each others’ progress. It is 60 minutes long, is graded live, and requires each team to work together on progressively harder five-problem sets. Each new set is worth more points than the previous set. <b class="red">Different divisions will have different Guts round questions</b>. Note that <b>there are no benefits of turning in the last set early</b>. There are no bonus points for timing. Please also note that <b class="red">the weighting system for the later problems has been tweaked</b> to more accurately reflect difficulty.
     <li><b>The Fun round</b> is an exciting, new round consisting of several separate mini-events, including puzzles, trivia, and an estimation round.</li>
 </ol>
 
