--- a/home/templates/home/info.html
+++ b/home/templates/home/info.html
@@ -28,17 +28,21 @@
     Additionally, snacks will be provided for coaches in the grading room (room 161, a computer lab).
     Coaches are invited to bring snacks for their own team, although it is not necessary.
 </p>
+
 {% endif %}
 
 <h3>Contest</h3>
 <p>
-    MBMT consists of four rounds: the Subject Tests (of which students take two subjects among Algebra, Geometry, Combinatorics, or Number Theory), the Team Round, the Guts Round, and the Fun Round.
-    Please note that there is no Sprint Round this year.
-    Each Subject Test consists of eight questions on one subject and lasts thirty minutes.
-    The Team Round contains fifteen questions for all team members to collaboratively solve in forty-five minutes.
-    The Guts Round (something many middle school students have not seen before), an hour long round, is graded live and requires team members to work together on progressively harder five-problem sets, each of which is worth more points than the previous set.
-    Finally, the Fun Round is an exciting, new round consisting of several separate mini-events, including puzzles, trivia, and an estimation round.
-    All of the rounds, except for the Fun Round, will be split by division.
+    MBMT consists of four rounds: Individual Round, Team Round, Guts Round, and Fun Round. 
+    This year, the format of the Individual Rounds has changed. 
+    The Zermelo (upper) division only will take Subject Tests (of which students take two subjects among Algebra, Geometry, Combinatorics, and Number Theory). 
+    In the Dedekind (lower) division, students now take two General Tests, which consist of problems from all subjects. 
+    Each Individual Test consists of eight questions and lasts thirty minutes.
+</p>
+<p>
+    The Team Round contains fifteen questions for all team members to collaboratively solve in forty-five minutes. 
+    The Guts Round (something many middle school students have not seen before), an hour-long round, is graded live and requires team members to work together on progressively harder five-problem sets, each of which is worth more points than the previous set. 
+    The Fun Round is an exciting round consisting of several separate mini-events, including puzzles, trivia, and an estimation round.
 </p>
 <p>
     Based on reflections made after last year’s tournament, we have recalibrated the accessibility and difficulty of problems in both divisions.
