--- a/home/templates/home/rules.html
+++ b/home/templates/home/rules.html
@@ -74,11 +74,11 @@ Further clarifications on terminology, notation, and acceptable answer forms can
 
 <a name="awards"></a><h3>Scoring and Awards</h3>
 <ol>
-<li>A student&rsquo;s <strong>overall individual score</strong> is the weighted sum of the two subject tests that they have taken. The <strong>top 8 individuals</strong> in each division will be recognized, and the <strong>top 5 </strong>will receive medals.</li>
-<li>Students are also ranked individually in the subject tests. The <strong>top 3 individuals</strong> of each subject test in each division are recognized. These scores are calculated through a method that accounts for test item difficulty and normalizes the scores between tests.</li>
-<li>High-placement ties will be broken using tiebreaker rounds. Tiebreaker rounds will be held in the grading room during the activity.</li>
+<li>A student&rsquo;s <strong>overall individual score</strong> is the weighted sum of the two subject tests that they have taken. The <strong>top 5 individuals</strong> in each division will be recognized, and the <strong>top 5 </strong>will receive medals.</li>
+<li><strong>Zermelo Division Only:</strong> Students are ranked individually in the four subject tests. The <strong>top 3 individuals</strong> of each subject test are recognized. These scores are calculated through a method that accounts for test item difficulty and normalizes the scores between tests.</li>
+<li>High-placement ties will be broken using tiebreaker rounds. Tiebreaker rounds will be held in the grading room during the Fun Round.</li>
 <li>The <strong>team score</strong> is a weighted sum of the individual, Team Round, and Guts Round scores. The <strong>top 5 teams</strong> in each division will be recognized.</li>
-<li>The highest scoring 6th grade student in the Descartes division will receive the <strong>Young Scholar Award</strong>.</li>
+<li>The highest scoring 6th grade student in the Zermelo division will receive the <strong>Young Scholar Award</strong>.</li>
 </ol>
 
 A more detailed guide to the scoring algorithm we use can be found at <a href="{% static "files/Scoring.pdf" %}">the scoring document linked here</a>.
