--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -14,7 +14,7 @@
 </p>
 
 <p>
-    You can find a link to our sample brochure from last year's contest<a href='{% static "files/Pamphlet.pdf" %}' style = "color:red font-size:20px">Link to MBMT 2019 Brochure</a></p>
+    You can find a link to our sample brochure from last year's contest: <a href='{% static "files/Pamphlet.pdf" %}' style = "color:red font-size:20px">Link to MBMT 2019 Brochure</a></p>
 </p>
 
 <div class="row">
