--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -35,7 +35,8 @@ This website was developed by <a href="https://singerng.github.io/" target="_bla
 (Github: <a href="https://github.com/singerng" target="_blank">@singerng</a>) and
 <a href="https://noahbkim.com/" target="_blank">Noah Kim '18</a>
 (Github: <a href="https://github.com/noahbkim" target="_blank">@noahbkim</a>).
-It is currently maintained by Ian Rackow '19.
+It is currently maintained by Shawn Zhao '20 and <a href="https://www.matthewshu.com/" target="_blank">Matthew Shu '20</a>
+(Github: <a href="https://github.com/nonameentered" target="_blank">@nonameentered</a>).
 It's written in <a href="https://djangoproject.com">Django</a> and hosted on our school servers.
 The source is on <a href="https://github.com/mbhs/mbmt">Github</a>.
 
