add sponsors and initial about changes

--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -47,6 +47,8 @@ The source is on <a href="https://github.com/mbhs/mbmt">Github</a>.
 <div class="sponsors">
     <img src="{% static "images/magnet.jpg" %}" height="150px">
     <img src="{% static "images/aops.png" %}" style="margin-left: 1rem;">
+    <img src="{% static "images/dailychallenge.png" %}" style="margin-left: 1rem;">
+    <img src="{% static "images/maplesoft.png" %}" style="margin-left: 1rem;">
 </div>
 
 {% endblock %}
