add explanation of stopgap measure

--- a/coaches/templates/coaches/team.html
+++ b/coaches/templates/coaches/team.html
@@ -16,6 +16,7 @@
 <p>
     For a complete explanation regarding what team compositions are allowed, see the <a href="{% url "home:rules" %}" target="_blank">rules</a>.
     Note that this year, the {{ harder }} division is harder.
+    This year, students in the {{ easier }} division should only be competing in "General Test 1" and "General Test 2".
 </p>
 
 {% if student_forms.non_form_errors %}
