--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -12,7 +12,7 @@ MBMT is proudly organized and executed entirely by students from the Montgomery 
 <div class="row organizers">
     {% for organizer in organizers %}
     <div class="col-md-3 col-xs-6 about-person">
-        <img src="{{ organizer.image }}">
+        <img src="{{ MEDIA_URL }}{{ organizer.image }}">
         <h3>{{ organizer.name }}</h3>
         <p>{{ organizer.role }}</p>
     </div>
