update sponsor text

--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -42,7 +42,7 @@ The source is on <a href="https://github.com/mbhs/mbmt">Github</a>.
 
 <h2>Sponsors</h2>
 
-<p>MBMT is sponsored by the Magnet Foundation and Art of Problem Solving.</p>
+<p>MBMT is sponsored by the Magnet Foundation, Art of Problem Solving, Daily Challenge with Po-Shen Loh, and Maplesoft.</p>
 
 <div class="sponsors">
     <img src="{% static "images/magnet.jpg" %}" height="150px">
