--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -42,13 +42,13 @@ The source is on <a href="https://github.com/mbhs/mbmt">Github</a>.
 
 <h2>Sponsors</h2>
 
-<p>MBMT is sponsored by the Magnet Foundation, Art of Problem Solving, Daily Challenge with Po-Shen Loh, and Maplesoft.</p>
+<p>MBMT is sponsored by the Magnet Foundation, Art of Problem Solving, Expii, and Maplesoft.</p>
 
 <div class="sponsors">
-    <img src="{% static "images/magnet.jpg" %}" height="150px">
-    <img src="{% static "images/aops.png" %}" style="margin-left: 1rem;">
-    <img src="{% static "images/dailychallenge.png" %}" style="margin-left: 1rem;">
-    <img src="{% static "images/maplesoft.png" %}" style="margin-left: 1rem;">
+    <a href="http://www.mbhsmagnet.org/"><img src="{% static "images/magnet.jpg" %}" height="150px"></a>
+    <a href="https://artofproblemsolving.com/"><img src="{% static "images/aops.png" %}" style="margin-left: 1rem;"></a>
+    <a href="https://www.expii.com/"><img src="{% static "images/dailychallenge.png" %}" style="margin-left: 1rem;"></a>
+    <a href="https://www.maplesoft.com/"><img src="{% static "images/maplesoft.jpg" %}" style="margin-left: 1rem;"></a>
 </div>
 
 {% endblock %}
