--- a/home/templates/shared/base.html
+++ b/home/templates/shared/base.html
@@ -10,6 +10,7 @@
         <script type="text/javascript" src="{% static "js/jquery.min.js" %}"></script>
         <script type="text/javascript" src="{% static "js/bootstrap.min.js" %}"></script>
         <script type="text/javascript" src="{% static "js/email.js" %}"></script>
+        <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.ico' %}"/>
         {% block head %}{% endblock %}
     </head>
     <body>
