--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -47,7 +47,7 @@ The source is on <a href="https://github.com/mbhs/mbmt">Github</a>.
 <div class="sponsors">
     <a href="http://www.mbhsmagnet.org/"><img src="{% static "images/magnet.jpg" %}" height="150px"></a>
     <a href="https://artofproblemsolving.com/"><img src="{% static "images/aops.png" %}" style="margin-left: 1rem;"></a>
-    <a href="https://www.expii.com/"><img src="{% static "images/dailychallenge.png" %}" style="margin-left: 1rem;"></a>
+    <a href="https://daily.poshenloh.com/"><img src="{% static "images/dailychallenge.png" %}" style="margin-left: 1rem;"></a>
     <a href="https://www.maplesoft.com/"><img src="{% static "images/maplesoft.jpg" %}" style="margin-left: 1rem;"></a>
 </div>
 
