Added online round into archive

--- a/home/templates/home/archive.html
+++ b/home/templates/home/archive.html
@@ -28,7 +28,36 @@ a round since we haven't done every round every year. In each year, the more dif
         </thead>
 
         <tbody>
-		            <tr>
+            <tr>
+                <th rowspan="1">2020</th>
+                <th>Online</th>
+                <td>
+                    -
+                </td>
+                <td>
+                    -
+                </td>
+                <td>
+                    -
+                </td>
+                <td>
+                    -
+                </td>
+                <td>
+                    -
+                </td>
+                <td>
+                    <a href="{% static 'archive/2020/team.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2020/team_key.pdf' %}" target="_blank">Solutions</a>
+                </td>
+                <td rowspan="1">
+					-
+				</td>
+                <td>
+                    -
+                </td>
+            </tr>
+		    <tr>
                 <th rowspan="2">2019</th>
                 <th>Descartes</th>
                 <td>
