Edited copy on front page to reflect in person status of MBMT in 2022.

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -9,13 +9,14 @@
 
 <p class="main-title">The Montgomery Blair Math Tournament</p>
 
-<!--
+<!-- <!-- -->
 <p class="main-text">
     <span>A mathematics competition for middle school students in the Maryland area on Saturday, March 28th, 2020</span>
     <a href="{% url "coaches:register" %}" style="color: #ba2222">Register &#x276f;</a>
 </p>
--->
-<p class="main-text" style="font-weight:bold;color:#ba2222">Due to COVID-19, MBMT 6 will be held online this year.</p>
+<!-- --> -->
+<!-- <p class="main-text" style="font-weight:bold;color:#ba2222">Due to COVID-19, MBMT 6 will be held online this year.</p> -->
+<!--
 <p class="main-text">
         <span> MBMT 6 will be held an unconventional and original competition approach: From <b>Saturday, June 13th</b> to <b>Wednesday, June 17th</b>, your students will submit answers to a set of problems and 
         compete live against other teams. Students will receive feedback on their answers and will have the opportunity to resubmit answers on subsequent days; a live leaderboard will display scores of top teams.
@@ -26,7 +27,7 @@
     Please register for MBMT 6 through <a href="http://tinyurl.com/mbmt2020" style="color: #ba2222">this form &#x276f;</a> by <b>Friday, June 12th</b>. After you register, more details about our competition, submission, grading, and scoring policies
     will be sent out to registered adult contacts as it gets closer to the competition window.
 </p>
-
+-->
 <!--
 <p>
     You can find a link to our sample brochure from last year's contest: <a href='{% static "files/Pamphlet.pdf" %}' style = "color:red font-size:20px">Link to MBMT 2019 Brochure</a></p>
