Doing the better writing gooder

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -9,12 +9,13 @@
 
 <p class="main-title">The Montgomery Blair Math Tournament</p>
 
-<!-- <!-- -->
+
 <p class="main-text">
-    <span>A mathematics competition for middle school students in the Maryland area on Saturday, March 28th, 2020</span>
+    <span>A mathematics competition for middle school students in the Maryland area</span>
+    <span>Details Coming Soon...</span>
     <a href="{% url "coaches:register" %}" style="color: #ba2222">Register &#x276f;</a>
 </p>
-<!-- --> -->
+
 <!-- <p class="main-text" style="font-weight:bold;color:#ba2222">Due to COVID-19, MBMT 6 will be held online this year.</p> -->
 <!--
 <p class="main-text">
