--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -12,7 +12,7 @@
 
 <p class="main-text">
     <span>A mathematics competition for middle school students in the Maryland area</span>
-    <span>Details Coming Soon...</span>
+    <span>Details Coming Soon</span>
     <a href="{% url "coaches:register" %}" style="color: #ba2222">Register &#x276f;</a>
 </p>
 
