--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -7,7 +7,7 @@
 
 MBMT is proudly organized and executed entirely by students from the Montgomery Blair High School Math Team.
 
-<h2>Contest Organizers</h2>
+<h2>Past Contest Organizers</h2>
 
 <div class="row organizers">
     {% for organizer in organizers %}
@@ -19,7 +19,7 @@ MBMT is proudly organized and executed entirely by students from the Montgomery 
     {% endfor %}
 </div>
 
-<h2>Problem Writers</h2>
+<h2>Past Problem Writers</h2>
 
 <p>We're very thankful to our problem writers, without whom we wouldn't have a contest:</p>
 
@@ -35,14 +35,14 @@ This website was developed by <a href="https://singerng.github.io/" target="_bla
 (Github: <a href="https://github.com/singerng" target="_blank">@singerng</a>) and
 <a href="https://noahbkim.com/" target="_blank">Noah Kim '18</a>
 (Github: <a href="https://github.com/noahbkim" target="_blank">@noahbkim</a>).
-It is currently maintained by Shawn Zhao '20 and <a href="https://www.matthewshu.com/" target="_blank">Matthew Shu '20</a>
-(Github: <a href="https://github.com/nonameentered" target="_blank">@nonameentered</a>).
+It is currently maintained by <a href="https://www.vijayrs.com/" target="_blank">Vijay Shanmugam '23</a>
+(Github: <a href="https://github.com/jbolt01" target="_blank">@jbolt01</a>).
 It's written in <a href="https://djangoproject.com">Django</a> and hosted on our school servers.
 The source is on <a href="https://github.com/mbhs/mbmt">Github</a>.
 
-<h2>Sponsors</h2>
+<h2>Past Sponsors</h2>
 
-<p>MBMT is sponsored by the Magnet Foundation, Art of Problem Solving, Expii, and Maplesoft.</p>
+<p>MBMT was sponsored by the Magnet Foundation, Art of Problem Solving, Expii, and Maplesoft.</p>
 
 <div class="sponsors">
     <a href="http://www.mbhsmagnet.org/"><img src="{% static "images/magnet.jpg" %}" height="150px"></a>
