--- a/home/templates/home/info.html
+++ b/home/templates/home/info.html
@@ -21,7 +21,7 @@
 {% if competition %}
 <h3>Logistics</h3>
 <p>
-    The {{ competition.year }} annual MBMT will occur in <strong>Montgomery Blair High School</strong> on <strong>{{ competition.date|date:"F jS, Y" }}</strong> from <strong>12:00 pm - 6:00 pm</strong>.
+    The {{ competition.year }} annual MBMT will occur in <strong>Montgomery Blair High School</strong> on <strong>{{ competition.date|date:"F jS, Y" }}</strong> from <strong>9:00 am - 3:00 pm</strong>.
     Our address is <a href="https://www.google.com/maps/place/Montgomery+Blair+High+School/@39.0183042,-77.01385,17z/data=!3m1!4b1!4m5!3m4!1s0x89b7cf586f9b73d5:0xc227c473fffb50c7!8m2!3d39.0183042!4d-77.011656"><strong>51 University Blvd E, Silver Spring, MD 20901</strong></a>.
     Please arrive on the University Boulevard side of the school.
     <b>Snacks and drinks will be provided for students</b>.
@@ -59,15 +59,15 @@
 {% if competition %}
 <h3>Schedule</h3>
 <table class="schedule">
-    <tr><td>11:45 AM - 12:15 PM</td><td>Registration, finding assigned tables</td></tr>
-    <tr><td>12:30 - 1:00 PM</td><td>Subject Test #1</td></tr>
-    <tr><td>1:05 - 1:35 PM</td><td>Subject Test #2</td></tr>
-    <tr><td>1:35 - 2:00 PM</td><td>Break</td></tr>
-    <tr><td>2:05 - 2:50 PM</td><td>Team Round</td></tr>
-    <tr><td>3:00 - 4:00 PM</td><td>Guts Round</td></tr>
-    <tr><td>4:00 - 4:30 PM</td><td>Tiebreakers and Dinner</td></tr>
-    <tr><td>4:30 - 5:15 PM</td><td>Fun Round</td></tr>
-    <tr><td>5:20 - 6:00 PM</td><td>Awards Ceremony</td></tr>
+    <tr><td>8:45 AM - 9:15 PM</td><td>Registration, finding assigned tables</td></tr>
+    <tr><td>9:30 - 10:00 PM</td><td>Subject Test #1</td></tr>
+    <tr><td>10:05 - 10:35 PM</td><td>Subject Test #2</td></tr>
+    <tr><td>10:35 - 11:00 PM</td><td>Break</td></tr>
+    <tr><td>11:05 - 11:50 PM</td><td>Team Round</td></tr>
+    <tr><td>12:00 - 1:00 PM</td><td>Guts Round</td></tr>
+    <tr><td>1:00 - 3:30 PM</td><td>Tiebreakers and Lunch</td></tr>
+    <tr><td>1:30 - 2:15 PM</td><td>Fun Round</td></tr>
+    <tr><td>2:20 - 3:00 PM</td><td>Awards Ceremony</td></tr>
 </table>
 {% endif %}
 
