--- a/home/templates/home/rules.html
+++ b/home/templates/home/rules.html
@@ -24,7 +24,7 @@
         <li>Teams of 1 or 2 have no restrictions; however, refer to rule #4 below for more information on teams of 1 or 2.</li>
     </ol>
     <li>If there are fewer than 5 students interested in participating, you may register incomplete teams. For an incomplete team’s Team and Guts round scores to be officially considered, incomplete teams must have <b>at least 3 students</b>. Teams with one or two students may compete, but their Team and Guts round will not be officially graded.</li>
-    <li>We <b>do not</b> allow mixed-school or mixed-organization teams. However, we do allow organizations consisting of students from multiple schools, home-school groups, and community activity groups, to name a few.</li>
+    <li>We <b>do not</b> allow mixed-school or mixed-organization teams. However, we do allow organizations consisting of home-school groups, and community activity groups, to name a few.</li>
     <li>We <b>do not</b> allow elementary school students to participate in MBMT. </li>
     <li>Finally, <b>any school or organization with students in grades 6-8 can register and attend</b>.</li>
 </ol>
