--- a/home/templates/home/info.html
+++ b/home/templates/home/info.html
@@ -59,13 +59,13 @@
 {% if competition %}
 <h3>Schedule</h3>
 <table class="schedule">
-    <tr><td>8:45 AM - 9:15 PM</td><td>Registration, finding assigned tables</td></tr>
-    <tr><td>9:30 - 10:00 PM</td><td>Subject Test #1</td></tr>
-    <tr><td>10:05 - 10:35 PM</td><td>Subject Test #2</td></tr>
-    <tr><td>10:35 - 11:00 PM</td><td>Break</td></tr>
-    <tr><td>11:05 - 11:50 PM</td><td>Team Round</td></tr>
+    <tr><td>8:45 AM - 9:15 AM</td><td>Registration, finding assigned tables</td></tr>
+    <tr><td>9:30 - 10:00 AM</td><td>Subject Test #1</td></tr>
+    <tr><td>10:05 - 10:35 AM</td><td>Subject Test #2</td></tr>
+    <tr><td>10:35 - 11:00 AM</td><td>Break</td></tr>
+    <tr><td>11:05 - 11:50 AM</td><td>Team Round</td></tr>
     <tr><td>12:00 - 1:00 PM</td><td>Guts Round</td></tr>
-    <tr><td>1:00 - 3:30 PM</td><td>Tiebreakers and Lunch</td></tr>
+    <tr><td>1:00 - 2:00 PM</td><td>Tiebreakers and Lunch</td></tr>
     <tr><td>1:30 - 2:15 PM</td><td>Fun Round</td></tr>
     <tr><td>2:20 - 3:00 PM</td><td>Awards Ceremony</td></tr>
 </table>
