--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -18,17 +18,17 @@ MBMT is proudly organized and executed entirely by students from the Montgomery 
 </ul>
 
 
-<!-- <h2>Past Contest Organizers</h2>
+<h2>Past Contest Organizers</h2>
 
 <div class="row organizers">
     {% for organizer in organizers %}
     <div class="col-md-3 col-xs-6 about-person">
-        <img src="{{ MEDIA_URL }}{{ organizer.image }}">
+        <!-- <img src="{{ MEDIA_URL }}{{ organizer.image }}"> -->
         <h3>{{ organizer.name }}</h3>
-        <p>{{ organizer.role }}</p>
+        <!-- <p>{{ organizer.role }}</p> -->
     </div>
     {% endfor %}
-</div> -->
+</div>
 
 <h2>Website</h2>
 
