reorder about page

--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -7,18 +7,7 @@
 
 MBMT is proudly organized and executed entirely by students from the Montgomery Blair High School Math Team.
 
-<h2>Problem Writers</h2>
-
-<p>We're very thankful to our problem writers, without whom we wouldn't have a contest:</p>
-
-<ul class="writers">
-    {% for writer in writers %}
-    <li>{{ writer.name }}</li>
-    {% endfor %}
-</ul>
-
-
-<h2>Past Contest Organizers</h2>
+<h2>Contest Organizers</h2>
 
 <div class="row organizers">
     {% for organizer in organizers %}
@@ -29,6 +18,16 @@ MBMT is proudly organized and executed entirely by students from the Montgomery 
     </div>
     {% endfor %}
 </div>
+
+<h2>Problem Writers</h2>
+
+<p>We're very thankful to our problem writers, without whom we wouldn't have a contest:</p>
+
+<ul class="writers">
+    {% for writer in writers %}
+    <li>{{ writer.name }}</li>
+    {% endfor %}
+</ul>
 
 <h2>Website</h2>
 
