--- a/coaches/templates/coaches/team.html
+++ b/coaches/templates/coaches/team.html
@@ -56,7 +56,7 @@
     </div>
 </form>
 
-<script>
+<!-- <script>
 $('select[name=division]').change(function(e){
   if ($('select[name=division]').val() == '1'){
       $('.student-subjects select').val('');
@@ -71,5 +71,5 @@ $('select[name=division]').change(function(e){
       $('.student-subject2 select option[value=g2]').prop('disabled',false);
   }
 });
-</script>
+</script> -->
 {% endblock %}
