--- a/home/templates/home/info.html
+++ b/home/templates/home/info.html
@@ -35,8 +35,8 @@
 <p>
     MBMT consists of four rounds: Individual Round, Team Round, Guts Round, and Fun Round. 
     This year, the format of the Individual Rounds has changed. 
-    The Zermelo (upper) division only will take Subject Tests (of which students take two subjects among Algebra, Geometry, Combinatorics, and Number Theory). 
-    In the Dedekind (lower) division, students now take two General Tests, which consist of problems from all subjects. 
+    Both the Zermelo (upper) and Dedekind (lower) divisions  will take Subject Tests (of which students take two subjects among Algebra, Geometry, Combinatorics, and Number Theory). 
+    <!-- In the Dedekind (lower) division, students now take two General Tests, which consist of problems from all subjects.  -->
     Each Individual Test consists of eight questions and lasts thirty minutes.
 </p>
 <p>
